--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'playfair dispy',Arial,serif;
     margin: 0;
     padding: 0;
     background: #f5f5f5;
